--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/listarJS.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/listarJS.html
@@ -20,4 +20,4 @@
                 th:src="@{/admin/javascript/reutilizables/ordenarColumnas.js}" type="text/javascript"
                 crossorigin="anonymous">
                 </script>
-</th:block>
+</th:block>p
