--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/headerPerfil.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/headerPerfil.html
@@ -1,50 +1,50 @@
 <th:block th:fragment="headerPerfil">
     <div sec:authorize="!isAuthenticated()" class="d-flex align-items-center">
-        <a href="/login" th:href="@{/login}" class="btn btn-outline-light me-2" title="Acceder a tu cuenta">
-            <i class="bi bi-box-arrow-in-right" aria-hidden="true"></i> <span>Iniciar sesión</span>
+        <a href="../global/login.html" th:href="@{/login}" class="btn btn-outline-light me-2" title="Acceder a tu cuenta">
+            <i class="bi bi-box-arrow-in-right me-1"></i>
+            <span>Iniciar sesión</span>
         </a>
         <a href="/register" th:href="@{/register}" class="btn btn-light" title="Crear una cuenta nueva">
-            <i class="bi bi-person-plus" aria-hidden="true"></i> <span>Registrarse</span>
+            <i class="bi bi-person-plus me-1"></i>
+            <span>Registrarse</span>
         </a>
     </div>
 
     <ul sec:authorize="isAuthenticated()" class="navbar-nav text-light">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" id="userDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-person-circle me-1"></i>
-                <span sec:authentication="name">Usuario</span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                <li><a class="dropdown-item" th:href="@{/dashboard}" href="../global/index.html">
-                        <i class="bi bi-briefcase me-2"></i>Mi Dashboard
-                    </a></li>
-                <li><a class="dropdown-item" th:href="@{/perfil}">
-                        <i class="bi bi-person me-2"></i>Mi perfil
-                    </a></li>
-                <li><a class="dropdown-item" th:href="@{/ajustes}">
-                        <i class="bi bi-gear me-2"></i>Ajustes
-                    </a></li>
+            <span class="nav-link dropdown-toggle text-light cursor-pointer" id="userDropdown"
+                data-bs-toggle="dropdown">
+                <i class="bi bi-person-circle me-1 cursor-pointer"></i>
+                <span sec:authentication="name" class="cursor-pointer">Usuario</span>
+            </span>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li>
+                    <a class="dropdown-item" th:href="@{/dashboard}" href="../global/index.html" title="Ir a tu dashboard">
+                        <i class="bi bi-briefcase me-2"></i>
+                        <span>Mi Dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" th:href="@{/perfil}" title="Ir a tu perfil">
+                        <i class="bi bi-person me-2"></i>
+                        <span>Mi perfil</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" th:href="@{/ajustes}" title="Ir a los ajustes de tu cuenta">
+                        <i class="bi bi-gear me-2"></i>
+                        <span>Ajustes</span>
+                    </a>
+                </li>
                 <li>
                     <hr class="dropdown-divider">
                 </li>
                 <li>
                     <form th:action="@{/logout}" method="post">
-                        <button class="dropdown-item" type="submit">
-                            <i class="bi bi-box-arrow-right me-2"></i>Cerrar sesión
-                        </button>
-                    </form>
+                        <input class="dropdown-item" type="submit" value="Cerrar sesión">
+                    </form>                
                 </li>
             </ul>
         </li>
-        <!-- <li class="nav-item">
-                    <a class="nav-link position-relative" th:href="@{/notificaciones}">
-                        <i class="bi bi-bell"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            3
-                            <span class="visually-hidden">notificaciones</span>
-                        </span>
-                    </a>
-                </li> -->
     </ul>
 </th:block>
