--- a/GarciaMariaPablo/src/main/resources/templates/_fragments/popUpMessages.html
+++ b/GarciaMariaPablo/src/main/resources/templates/_fragments/popUpMessages.html
@@ -1,18 +1,18 @@
 <div th:fragment="popUpMessages">
-    <div th:classappend="${error == null or error.isEmpty()} ? d-none : ''"
-        class="alert alert-danger d-flex align-items-center mb-4" role="alert" aria-live="assertive" aria-atomic="true">
-        <i class="bi bi-exclamation-triangle-fill me-2" aria-hidden="true"></i>
-        <div>
-            <span class="visually-hidden font-weight-bold">Error:</span>
+    <div th:classappend="${error == null or error.isEmpty()} ? 'd-none' : ''"
+        class="alert alert-danger d-flex align-items-center my-4">
+        <div class="mx-auto">
+            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+            <span class="visually-hidden fw-bold">Error:</span>
             <span th:text="${error}" id="errorTextMessage">Se ha producido un error inesperado.</span>
         </div>
     </div>
 
-    <div th:classappend="${info == null or info.isEmpty()} ? d-none : ''"
-        class="alert alert-info d-flex align-items-center mb-4" role="alert" aria-live="assertive" aria-atomic="true">
-        <i class="bi bi-info-circle-fill me-2" aria-hidden="true"></i>
-        <div>
-            <span class="visually-hidden font-weight-bold">Información:</span>
+    <div th:classappend="${info == null or info.isEmpty()} ? 'd-none' : ''"
+        class="alert alert-info d-flex align-items-center my-4">
+        <div class="mx-auto">
+            <i class="bi bi-info-circle-fill me-2"></i>
+            <span class="visually-hidden fw-bold">Información:</span>
             <span th:text="${info}" id="infoTextMessage">Mensaje informativo</span>
         </div>
     </div>
